レポジトリテスト indexにh1追加

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </div>
     </header>
 
+    <h1>追加成功！</h1>
+
     <main class="home" id="home">
 
         <div class="slider" id="slider">
