画像ファイルと、そのたhtmlの追加 10/17

--- a/communication/communication.html
+++ b/communication/communication.html
@@ -45,6 +45,12 @@
                             サンプルテキストです。サンプルテキストです。サンプルテキストです。サンプルテキストです。サンプルテキストです。サンプルテキストです。サンプルテキストです。
                         </p>
 
+                        <a class="communication__reservation btn" href="../settlement/checker.html">予約＆決済へ</a>
+
+                        <dl class="communication__confirm">
+                            <dt class="communication__confirmText">募集情報を確認する</dt>
+                            <dd class="communication__confirmTriangle"></dd>
+                        </dl>
                     </div>
                 </article>
             </div>
