すみませんメインブランチいじってしまいましたコミット

--- a/settlement/settlement.html
+++ b/settlement/settlement.html
@@ -43,16 +43,17 @@
                 </dl>
 
                 <form class="settlement__form form" action="">
-                    <label class="form__label" for="name">カード番号</label>
+                    <label class="form__label" for="cardNum">カード番号</label>
                     <input class="form__input" type="number" id="name" name="name" placeholder="例:3000 3000 3000">
 
-                    <label class="form__label" for="date">有効期限</label>
+                    <label class="form__label" for="deadline">有効期限</label>
                     <input class="form__input" type="date" id="date" name="date">
 
-                    <label class="form__label" for="mail">メールアドレス</label>
-                    <input class="form__input" type="mail" id="mail" name="mail" placeholder="OOOO@example.com">
+                    <label class="form__label" for="security">セキュリティコード</label>
+                    <input class="form__input" type="number" id="number" name="number" placeholder="000">
                 </form>
 
+                <a class="settlement__btn btn" href="#">確定</a>
 
             </div>
         </section>
