他ページ作成、react挿入するため、コミット

--- a/settings/myBorrwList.html
+++ b/settings/myBorrwList.html
@@ -18,12 +18,32 @@
     </header>
 
     <main>
-        <section class="completion">
-            <div class="completion__inner">
-                <h2 class="completion__title">ありがとうございます！</h2>
+        <section class="myBorrw">
+            <div class="myBorrw__inner">
+                <h2 class="myBorrw__title">あなたの借りた家</h2>
 
-                <p class="completion__text">予約、決済が完了しました。</p>
-                <a class="completion__btn btn" href="../index.html">ホーム画面へ</a>
+                <div class="myBorrw__overview">
+                    <img class="myBorrw__headImg" src="https://placehold.jp/390x288.png" alt="">
+
+                    <div class="myBorrw__info">
+                        <dl class="myBorrw__list">
+                            <dt class="myBorrw__item">〇〇町の一軒家</dt>
+                            <dd class="myBorrw__item">1h/~1000円</dd>
+                        </dl>
+
+                        <dl class="myBorrw__list">
+                            <dt class="myBorrw__item">
+                                <img src="https://placehold.jp/30x30.png" alt="">
+                                <p class="myBorrw__userName">Aさん</p>
+                            </dt>
+                            <dd class="myBorrw__item">
+                                <img src="https://placehold.jp/30x30.png" alt="">
+                            </dd>
+                        </dl>
+
+                        <p class="myBorrw">この物件の特徴</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
